# sink

./: .env  .gitignore  Cargo.toml  README.md  build.rs  dist.sh  event.types.json  init.sh  item.types.json  package-lock.json  package.json
.github/workflows/: rust.yml
migrations/: 20241230131352_init_schema.sql  20241231115425_update_item_header_item_id_to_not_null.sql
sqlite-shell/: shell.c
src/: import.rs  lib.rs  main.rs  model.rs  repository.rs  server.rs  service.rs  shared.rs
tests/: repository.rs  service.rs
tests/fixtures/: items.sql
web/: .eslintignore  eslint.config.js  package-lock.json  package.json  purgecss.config.cjs  purgecss.js  svelte.config.js  test.js  vite.config.ts
web/adapter/: index.js
web/adapter/files/: index.js  main.js  polyfills-0.js  polyfills-1.js  polyfills.js  shims.js
web/src/: app.html  app.scss  hooks.server.ts  prism.css  prism.js
web/src/lib/: Highlighted.svelte  Item.svelte  LocalDateTime.svelte  Search.svelte  SettingsIcon.svelte  api.ts  model.ts  shared.ts  utils.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
web/src/routes/item/[id]/: +page.server.ts  +page.svelte  +page.ts
