[package]
name = "sink"
version = "1.10.1"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0"
clap = { version = "4", features = ["derive"] }
const_format = "0"
deadpool = "0"
libc = "0"
regex = "1"
rusqlite = { version = "0", features = ["bundled", "functions"] }
rust-embed = { version = "8", features = ["include-exclude", "mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0"
tower-http = { version = "0", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[build-dependencies]
cc = "1"
static-files = "0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
