[package]
name = "sink"
version = "2.0.3"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"
memchr = "2"
regex = "1"
rusqlite = { version = "0", features = ["functions"] }
rust-embed = { version = "8", features = ["include-exclude", "mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0"
tower-http = { version = "0", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[build-dependencies]
static-files = "0"

[dev-dependencies]
mockall = "0"
rstest = "0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
